[package]
name = "tracy-client-sys"
version = "0.16.1" # AUTO-BUMP
authors = ["Simonas Kazlauskas <tracy-client-sys@kazlauskas.me>"]
build = "build.rs"
license = "(MIT OR Apache-2.0) AND BSD-3-Clause"
edition = "2018"
readme = "../README.mkd"
repository = "https://github.com/nagisa/rust_tracy_client"
homepage = "https://github.com/nagisa/rust_tracy_client"
documentation = "https://docs.rs/tracy-client-sys"
description = """
Low level bindings to the client libraries for the Tracy profiler
"""

[dependencies]

[build-dependencies]
cc = { version = "1", default-features = false }

[features]
default = [ "enable" ]
# Enable Tracy. Once this is activated, tracy will be initialized at program startup.
enable = []
# Enable delayed init support. Tracy will initialize on first use, rather than during
# life-before-main.
delayed-init = []
# Enable support for running with low resolution timers.
lowres-timer = []
# Do not exit when program finishes execution or crashes. Can also be activated by an environment
# variable: `TRACY_NO_EXIT`.
noexit = []
# Enable on-demand mode. Traces are only collected when a server connects to the client.
# Also makes it possible to repeatedly re-connect to a client.
ondemand = []
# Do not announce its presence on the network.
# Defines `TRACY_NO_BROADCAST`
no-broadcast = []
# Listen only on localhost instead of all network interfaces.
# Defines `TRACY_ONLY_LOCALHOST`
only-localhost = []
# Do not use IPv6
# Defines `TRACY_ONLY_IPV4`
only-ipv4 = []
# Use lower-resolution timer when invariant TSC is not supported.
timer-fallback = []
